@startuml BorneFlash
set separator ::

' === Stéréotypes ===
interface IBaseEntityData <<(I,#FFAAAA) Data >> {
    +id: string
    +createdAt?: Date
    +updatedAt?: Date
}

interface IEntity <<(I,#AAFFAA) Entity >> {
    +getId() : string
    +getCreatedAt() : Date | undefined
    +getUpdatedAt() : Date | undefined
    +toData() : T
}

interface ITarifData <<(I,#FFAAAA) Data >> {
    +baseMontant: number
    +heureCreuse?: IHeureCreuseData
    +type: string
    +nom: string
    +description?: string
    +estActif: boolean
}

interface IHeureCreuseData <<(I,#FFAAAA) Data >> {
    +baseMontant: number
    +heureDebut: number
    +heureFin: number
    +jours?: number[]
}

interface ITarif <<(I,#AAFFAA) Entity >> {
    +getBaseMontant() : number
    +getHeureCreuse() : IHeureCreuseData | undefined
    +getType() : string
    +getNom() : string
    +getDescription() : string | undefined
    +estActif() : boolean
    +calculerCout(sessionData: ISessionRechargeData) : number
    +isHeureCreuse(heureChargement: Date) : boolean
}

interface ISessionRechargeData <<(I,#FFAAAA) Data >> {
    +id: string
    +energieKwh: number
    +heureChargement?: Date
    +tarif?: ITarif
}

interface ISessionRecharge <<(I,#AAFFAA) Entity >> {
    +count() : number
}

' === Classes ===
abstract class BaseEntity <<(C,#FFD700) Abstract >> {
    #id: string
    #createdAt?: Date
    #updatedAt?: Date
    +{abstract} getId() : string
    +{abstract} getCreatedAt() : Date | undefined
    +{abstract} getUpdatedAt() : Date | undefined
    +{abstract} toData() : T
}

class Tarif <<(C,#87CEEB) Entity >> {
    -baseMontant: number
    -heureCreuse?: IHeureCreuseData
    -type: string
    -nom: string
    -description?: string
    -estActif: boolean
    +{static} TYPE_KWH: string
    +{static} TYPE_FORFAIT: string
    +{static} TYPE_HEURE_CREUSE: string
    +calculerCout(sessionData: ISessionRechargeData) : number
    -getMontantApplicable(sessionData: ISessionRechargeData) : number
    +isHeureCreuse(heureChargement: Date) : boolean
    +toData() : ITarifData
}

class TarifFactory <<(C,#90EE90) Factory >> {
    +{static} creerTarifKwh(data?: Partial<ITarifData>) : ITarif
    +{static} creerTarifForfait(data?: Partial<ITarifData>) : ITarif
    +{static} creerTarifHeureCreuse(data?: Partial<ITarifData>) : ITarif
}

class SessionRechargeService <<(C,#F0E68C) Service >> {
    -sessionData: ISessionRechargeData
    +count() : number
    +setTarif(tarif: ITarif) : void
    -generateId() : string
}

' === Relations ===
IBaseEntityData <|-- ITarifData : "<<extend>>"
IHeureCreuseData <-- ITarifData : "0..1"

IEntity <|.. ITarif : "<<implement>>"
IEntity <|.. BaseEntity : "<<implement>>"

BaseEntity <|-- Tarif : "<<extend>>"

ITarif <|.. Tarif : "<<implement>>"
ISessionRecharge <|.. SessionRechargeService : "<<implement>>"

Tarif ..> ISessionRechargeData : "use (paramètre)"
Tarif --> IHeureCreuseData : "-heureCreuse"

SessionRechargeService --> ITarif : "-tarif"
SessionRechargeService --> ISessionRechargeData : "-sessionData"

TarifFactory ..> ITarif : "create"
TarifFactory ..> Tarif : "create"

' === Légende ===
legend left
  | <#FFAAAA> | Interface de données (DTO) |
  | <#AAFFAA> | Interface d'entité |
  | <#FFD700> | Classe abstraite |
  | <#87CEEB> | Entité concrète |
  | <#90EE90> | Factory |
  | <#F0E68C> | Service |
end legend

@enduml